# erdos-open-problems

./: .env.example  .gitignore  AGENT_SETUP.md  ARCHITECTURE.md  DECISIONS.md  EGMRA Operator.cmd  EGMRA_AUDIT_REPORT.md  EGMRA_GAP_LEDGER.md  EGMRA_IMPLEMENTATION_EVIDENCE.md  EGMRA_VERIFICATION_EVIDENCE.md  FABLE_AUDIT_REPORT.md  FABLE_BASELINE_VERIFICATION.md  FABLE_CODE_INVENTORY.md  FABLE_FINAL_VERIFICATION.md  FABLE_INDEPENDENT_REQUIREMENTS.md  FABLE_LEDGER_DISCREPANCIES.md  FABLE_REMEDIATION_LOG.md  FABLE_SECURITY_AUDIT.md  FABLE_TEST_QUALITY_REPORT.md  FABLE_TRACEABILITY_MATRIX.md  FINAL_VERIFICATION_REPORT.md  HARNESS_RESEARCH.md  IMPLEMENTATION_LEDGER.md  IMPLEMENTATION_PLAN.md  README.md  SESSION2_PRODUCTION_REACHABILITY_REPORT.md  SETUP_GUIDE.md  SOLVER_ARCHITECTURE.md  START_PIPELINE.md  aristotle_verifier.py  attempt_exclusions.json  build_guide.py  build_status_sheet.py  build_t2_lane.py  check_corpus_integrity.py  data.json  deepseek_common.py  deepseek_rename.py  deepseek_runner.py  deepseek_submit.py  (+45 more)
.venev/: pyvenv.cfg
aristotle_lean_project/: AristotleProject.lean  lakefile.toml
audit/: FABLE_AUDIT_EXECUTION_PLAN.md  FABLE_INITIAL_GIT_STATUS.txt  checkpoint_remediation.md  compute_sandbox_remediation.md  lean_release_remediation.md  orchestrator_integration_remediation.md  phase1_normative_coverage.md  phase1_sections_10_16.md  phase1_sections_1_9.md  phase2_prior_claims_audit.md  phase3_static_inventory.md  phase4_baseline_raw.md
config/: egmra_policy.json  pipeline_features.json
corpus_supplement/: problem_1020.tex  problem_1041.tex  problem_106.tex  problem_107.tex  problem_1082.tex  problem_114.tex  problem_128.tex  problem_167.tex  problem_19.tex  problem_2.tex  problem_23.tex  problem_242.tex  problem_287.tex  problem_307.tex  problem_364.tex  problem_366.tex  problem_375.tex  problem_398.tex  problem_4.tex  problem_458.tex  problem_475.tex  problem_488.tex  problem_506.tex  problem_547.tex  problem_548.tex  problem_551.tex  problem_556.tex  problem_580.tex  problem_583.tex  problem_617.tex  problem_628.tex  problem_64.tex  problem_647.tex  problem_672.tex  problem_699.tex  problem_7.tex  problem_723.tex  problem_742.tex  problem_743.tex  problem_779.tex  (+5 more)
docs/: ARCHITECTURE_MAP.md  AUTONOMOUS_MATH_RESEARCH_ARCHITECTURE_2026.md  BASELINE_REPORT.md  CLAIM_EVIDENCE_LEDGER.md  CURRENT_PIPELINE_AUDIT.md  EGMRA_EFFECTIVENESS_AND_EFFICIENCY_REPORT.md  EGMRA_PROPOSITIONS_ANALYSIS.md  ERDOS_SEARCHER_SPEC.md  EVALUATION_PLAN.md  FINAL_COMPARISON_REPORT.md  IMPLEMENTATION_BACKLOG.md  INDEPENDENT_IMPROVEMENTS.md  LEAN_INTEGRATION_SPEC.md  MIGRATION_PLAN.md  PIPELINE_GAP_AND_IMPROVEMENT_ANALYSIS.md  PIPELINE_INTEGRATION_MATRIX.md  RESEARCH_SOURCE_MANIFEST.md  (+3 more)
(+5135 files in other folders)
